<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LNET</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_name">账号</string>
    <string name="login_pwd">密码</string>
    <string name="checkBox">保存登陆信息</string>
    <string name="testButton">登陆</string>
    <string name="title">新易泰系统登陆</string>
    <string name="transport_order">创建运输订单</string>
    <string name="carrier_order">创建托运单</string>
    <string name="loginButton">登陆</string>
    <string name="loginName">当前登录名：</string>
    <string name="back">上一步</string>
    <string name="client">客户：</string>
    <string name="t_number">运输单号：</string>
    <string name="t_destCity">目的地：</string>
    <string name="t_totalVolume">体积：</string>
    <string name="t_totalWeight">重量：</string>
    <string name="text_kg">kg</string>
    <string name="text_size">m³</string>
    <string name="t_create_button">创建订单</string>
    <string name="c_calculate_order">计算</string>
    <string name="c_client">承运商：</string>
    <string name="transport_select">输入运输订单</string>
    <string name="add_order">添加</string>
    <string name="calculate">计算</string>
    <string name="calculate_result">计算结果</string>
    <string name="complete">完成</string>
    <string name="save">保存</string>
    <string name="log_out">退出当前账号</string>
    <string name="transport_type">运输方式：</string>
    <string name="order_type">订单类型：</string>
    <string name="handover_type">交接方式：</string>
    <string name="billing_cycle">结算周期：</string>
    <string name="payment_type">支付方式：</string>
    <string name="calculate_type">计费方式：</string>
    <string name="urgency_level">紧急程度：</string>
    <string name="c_order_number">托运单号：</string>
    <string name="is_upstairs">是否上楼？</string>
    <string name="transport_find">运输单查询</string>
    <string name="carrierOrder_find">托运单查询</string>
    <string name="c_start_city">始发城市：</string>
    <string name="c_destcity">目的城市：</string>
    <string name="count">件数：</string>
    <string name="carrierorder_calculate">托运单计算</string>
    <string name="save_carrierorder">确认保存</string>
    <string name="before">上一步</string>
    <string name="back_to_main">返回</string>
    <string name="code_scan">二维码扫描</string>
    <string name="eng_num">英文和数字</string>
    <string name="ch_num">中文和数字</string>
    <string name="orc">文字识别</string>
    <string name="transportorder_find">运输订单查询</string>
    <string name="carrierorder_find">托运单查询</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="count_number">件</string>
    <string name="scan_code">扫描</string>
    <string name="view_more">查看更多</string>

    <string name="title_car_send">发车</string>
    <string name="title_car_back">回场</string>
    <string name="title_transport_order_create">提货开单</string>
    <string name="title_carrier_order_create">托运开单</string>
    <string name="title_carrier_order">我的托运单</string>
    <string name="title_transport_order_list">我的提货单</string>
    <string name="title_paichedan_list">我的派车单</string>
    <string name="title_person_info">个人信息</string>
    <string name="title_home">主页</string>
    <string name="title_logout">退出</string>

    <string name="drawer_open">Open</string>
        <string name="drawer_close">Close</string>
    <string-array name="nav_drawer_labels">
                <item>主页</item>
                <item>我的提货单</item>
                <item>我的托运单</item>
                <item>我的派车单</item>
                <item>费用申报</item>
                <item>个人信息</item>
            </string-array>

</resources>
