<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@android:color/background_light"
    android:id="@+id/login_table">
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             android:layout_gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/title"
                android:id="@+id/textView3" android:layout_column="3" android:layout_gravity="center"
                android:layout_marginTop="30dp" android:textColor="@android:color/holo_purple"
                android:textSize="@dimen/activity_horizontal_margin"
                android:padding="3dip"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_gravity="center" android:layout_marginTop="40dp">
        <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/login_name"
                android:layout_column="1" android:id="@+id/login_name" android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
        <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_name" android:layout_column="3" android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd"
                android:id="@+id/textView" android:layout_column="1" android:layout_gravity="center"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/text_pwd" android:layout_column="3"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBox"
                android:id="@+id/checkBox" android:layout_column="3" android:checked="false"
                android:textColor="@android:color/holo_purple"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testButton"
                android:id="@+id/login_button" android:layout_column="3"/>
    </TableRow>
</TableLayout>

