<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c_scrollview" android:background="@android:color/background_light">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@android:color/background_light">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/back"
                                android:id="@+id/c_back" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="托运单创建"
                                android:id="@+id/textView4"
                                android:layout_marginLeft="80dp"
                                android:textSize="20dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Spinner
                                    android:layout_width="250dp"
                                    android:layout_height="50dp"
                                    android:id="@+id/spinner_carrier" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <EditText
                                    android:layout_width="250dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/c_number" android:inputType="text|number"
                                    android:hint="输入托运单号"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Spinner
                                    android:layout_width="130dp"
                                    android:layout_height="70dp"
                                    android:id="@+id/c_province"
                                    android:layout_column="28"
                                    android:layout_marginLeft="50dp" />

                            <Spinner
                                    android:layout_width="130dp"
                                    android:layout_height="70dp"
                                    android:id="@+id/c_city"
                                    android:layout_column="33"
                                    android:layout_marginLeft="20dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <EditText
                                    android:layout_width="230dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/totalPackageQuantity" android:inputType="number"
                                    android:hint="输入件数"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/count_number"
                                    android:id="@+id/textV" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <EditText
                                    android:layout_width="230dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/c_totalvolume" android:inputType="numberDecimal"
                                    android:hint="输入体积"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_size"
                                    android:id="@+id/textView9" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <EditText
                                    android:layout_width="230dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/c_totalweight" android:inputType="numberDecimal"
                                    android:hint="输入重量"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_kg"
                                    android:id="@+id/textView10" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Spinner
                                    android:layout_width="250dp"
                                    android:layout_height="50dp"
                                    android:id="@+id/c_transportType" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Spinner
                                    android:layout_width="250dp"
                                    android:layout_height="50dp"
                                    android:id="@+id/c_calculateType" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <CheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/is_upstairs"
                                    android:id="@+id/upstairs" android:checked="false"
                                    android:textColor="@android:color/holo_purple"/>
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <EditText
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content" android:hint="输入运输单号"
                                    android:id="@+id/add_order" android:inputType="text|number"/>
                            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/add_order"
                                    android:id="@+id/add_transorder" />
                            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/calculate"
                                    android:id="@+id/c_calculate" />
                        </LinearLayout>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:gravity="center">

                            <TableLayout
                                    android:id="@+id/add_transportorder_table"
                                    android:layout_width="fill_parent"
                                    android:layout_height="match_parent"
                                    android:stretchColumns="1" android:layout_gravity="center">
                                <TableRow android:background="@android:color/holo_purple"
                                          android:layout_height="wrap_content" android:layout_width="wrap_content"
                                          android:layout_gravity="center">
                                    <TextView
                                            android:layout_width="150dp"
                                            android:text="单号"
                                            android:textStyle="bold" android:layout_height="wrap_content"/>

                                    <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="体积/m³"
                                            android:id="@+id/textView5"/>
                                    <TextView
                                            android:text="重量/kg"
                                            android:textStyle="bold" android:layout_width="100dp"
                                            android:layout_height="wrap_content"/>
                                    <TextView
                                            android:text="操作"
                                            android:textStyle="bold" android:layout_width="wrap_content"
                                            android:layout_height="fill_parent"/>
                                </TableRow>
                            </TableLayout>
                        </LinearLayout>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="98dp"
                                android:gravity="center">
                            <TableLayout android:layout_width="fill_parent"
                                         android:layout_height="wrap_content" android:id="@+id/carrierorder_calculate_table" android:layout_marginTop="10dp"
                                    >

                                <TableRow
                                        android:layout_width="fill_parent"
                                        android:layout_height="fill_parent"
                                        android:background="@android:color/holo_blue_dark" android:gravity="center">
                                    <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="40dp"
                                            android:text="@string/calculate_result"
                                            android:id="@+id/textView12" android:layout_gravity="center" android:gravity="center"/>
                                </TableRow>
                            </TableLayout>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>